# Cricket-Match-Win-Probability-Predictor

./: .gitignore  Data Cleaning.ipynb  Dockerfile  pyproject.toml  requirements.txt
backend/: main.py
data/: cleaned_base_data.csv  data_prep.py  feature_engineering.py  matchwise_data.csv  pre_match_features.csv
frontend/: app.py
models/: train_model.py
models/saved_models/: model_columns.joblib  xgboost_pre_match.joblib
